css/default.css
/* ... */
.expandedView {
    font-size: 110%;
    font-weight: bold;
    color: #4988de;
    cursor: pointer;
}

#ithumb {
    padding-top: 3px;
    padding-bottom: 0;
    cursor: pointer;
}

#ithumba {
    padding-top: 3px;
    padding-bottom: 0;
    cursor: pointer;
}

#ithumbb {
    padding-bottom: 0;
    background: #444;
    padding-top: 1px;
    cursor: pointer;
}

#thumb {
    position: relative;
}

select {
    width: 100%;
    text-align: center;
    border: 1px solid #aaa;
    background-color: rgba(51, 51, 51, 0.918);
    color: #fff;
    padding: 5px;
}

select.snrselect {
    width: 30%;
}

span.multichannel {
    margin-left: -8px;
}

div.multichannel {
    padding-top: 5px;
    text-align: justify;
}

.nowrap {
    display: inline;
}

.nowrap_noborder {
    border: 0;
    padding: 0;
    margin-left: auto;
    margin-right: auto;
    display: inline;
}

.multichannelinput {
    text-align: center;
}

option.default {
    font-weight: bold;
    background: #c5d4ff;
}

.line {
    display: block;
}

.textfield {
    width: 50%;
    text-align: left;
    margin: 1px 5px 1px 1px;
}

.textfield_20 {
    text-align: left;
    vertical-align: middle;
    padding: 4px;
    margin: 1px 5px 1px 1px;
}

.psffile {
    width: 70%;
}

.psfmissing {
    width: 70%;
    color: red;
}

.button {
    width: 25%;
    text-align: center;
}

.submit {
    width: 30%;
}

#message {
    font-size: 12px;
    font-weight: bold;
    margin: 0;
    padding: 0;
}

#message p {
    text-align: center;
    color: red;
}

.message_small {
    font-size: 10px;
    font-weight: normal;
    margin-bottom: 0;
    padding: 0;
}

.notice {
    text-align: center;
}

.info {
    color: red;
}

.highlightedPSF {
    color: red;
    font-style: italic;
    font-weight: bold;
    text-decoration: line-through;
}

.dbOutDated {
    background-color: #FF0000;
    color: white;
    font-size: 120%;
    padding: 5px;
}

.menu {
    font-size: 80%;
    text-align: center;
}

.normal {

}

.footnote {
    font-size: 80%;
}

.disabled {
    background: gray;
}

.superscript {
    vertical-align: super;
    font-size: 0.75em;
    font-weight: bold;
    padding-left: 3px;
    padding-right: 3px;
}

.removeFile {
    font-size: 70%;
}

#prevMenu {
}

#prevMenu .menuEntry, .menuEntryActive {
    background-color: #1e1e1e;
    color: #000;
    padding: 10px;
    white-space: nowrap;
    display: inline-block;
    vertical-align:  middle;
    font-size: 1.0em;
}

#prevMenu .menuEntryActive {
    background-color: #ccc;
}

#prevMenu .menuEntry:hover {
    background-color: #ffa;
}

#previewContents {
    overflow: auto;
    max-width: 98%;
    padding: 1em;
}

#previewImg {
    text-align: center;
}

#logFile {
    text-align: left;
}

#parameterFile {
    text-align: left;
    margin-left: 180px;
}

#report {
    background: #ff9;
    color: black;
}

#licenses {
    text-align: left;
}

#licenses .category {
    font-size: 16px;
    font-weight: bold;
    text-decoration: none;
    color: #fff;
}

#licenses .row {
    white-space: nowrap
}

#licenses .present {
    font-weight: normal;
    text-decoration: none;
    display: inline-block;
}

#licenses .absent {
    font-style: italic;
    color: lightslategrey;
    display: inline-block;
}

#licenses .checked {
    background: url("../images/accept.png") no-repeat center;
    background-size: 22px;
    width: 50px;
    display: inline-block;
}

#licenses .unchecked {
    width: 50px;
    height: 22px;
    display: inline-block;
}

#system {
    width: 100%;
    text-align: left;
    margin: 0;
}

#system table {
    border-collapse: collapse;
    border: 0;
    font-size: 75%;
}

#system table tr {
    text-align: left;
}

#system table td {
    padding: 0;
}

#system table td.section {
    padding-top: 10px;
    padding-bottom: 3px;
    vertical-align: top;
    text-align: left;
    width: 70%;
    font-weight: bold;
}

#system table td.key {
    vertical-align: top;
    text-align: left;
    width: 70%
}

#system table td.subkey {
    vertical-align: top;
    text-align: left;
    padding-left: 20px;
    width: 70%
}

#system table td.value {
    vertical-align: top;
    text-align: left;
    width: 30%
}

#psfselection {
    padding-left: 10px;
}

div.StedDeplModeValues {
    width: 250px;
    float: left;
    vertical-align: middle;
}

.message_confidence_asIs {
    border: none;
    height: 30px;
    margin-top: 0;
    margin-bottom: -5px;
}

.message_confidence_asIs:before {
    font-size: 0.8em;
    content: "Leave blank to read from file during deconvolution.";
    color: #009C89;
}

.message_confidence_verified {
    border: none;
    height: 30px;
    margin-top: 5px;
    margin-bottom: -5px;
}

.message_confidence_verified:before {
    font-size: 0.8em;
    content: "Leave blank to read from file during deconvolution.";
    color: #009C89;
}

.message_confidence_reported {
    border: none;
    height: 30px;
    margin-top: 5px;
    margin-bottom: -5px;
}

.message_confidence_reported:before {
    font-size: 0.8em;
    content: "Leave blank to read from file during deconvolution.";
    color: #009C89;
}

.message_confidence_estimated {
    border: none;
    height: 30px;
    margin-top: 5px;
    margin-bottom: -5px;
}

.message_confidence_estimated:before {
    font-size: 0.8em;
    content: "Cannot be read from file, please fill in.";
    color: #b09065;
}

.message_confidence_default {
    border: none;
    height: 30px;
    margin-top: 5px;
    margin-bottom: -5px;
}

.message_confidence_default:before {
    font-size: 0.8em;
    content: "Cannot be read from file, please fill in.";
    color: #b09065;
}

.message_confidence_provided {
    border: none;
    height: 0;
    margin-top: 5px;
    margin-bottom: -5px;
}

.message_confidence_provided:before {
    font-size: 0.8em;
    content: "";
    color: #fff;
    height: 0;
}

#login_user {
    margin: 0;
    text-align: left;
}
/* ... */

